--- a/package.json
+++ b/package.json
@@ -9,16 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.21.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
+    "@mui/x-data-grid": "^8.10.1",
+    "@mui/x-date-pickers": "^8.10.0",
+    "axios": "^1.11.0",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
+    "html5-qrcode": "^2.3.8",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "next": "15.4.6",
     "react": "19.1.0",
+    "react-confirm-alert": "^3.0.6",
+    "react-datepicker": "^8.5.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "react-json-editor-ajrm": "^2.5.14",
+    "react-qr-code": "^2.0.18",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
