--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "dayjs": "^1.11.13",
     "html5-qrcode": "^2.3.8",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "moment": "^2.30.1",
     "next": "15.4.6",
     "react": "19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^8.5.0",
     "react-dom": "19.1.0",
